# Lokus

./: CMakeLists.txt  README.md  build.sh  func_test.lk  int_test.lk  lokus  lokusDebugg  test.lk  var_test.lk
examples/: and_or_test.lk  error_test.lk  fib_test.lk  for_test.lk  func_test.lk  if_test.lk  int_test.lk  list_test.lk  loop_print.lk  loop_valid.lk  mod_test.lk  string_test.lk  sudoku_solver.lk  test.lk  test2.lk
include/: context.hpp  enum.hpp  node.hpp  value.hpp  visitor.hpp
old/: MakeFile  semantics copy.l  syntax copy.y
src/: CMakeLists.txt  context.cpp  main.cpp  node.cpp  semantics.cpp  semantics.l  syntax.cpp  syntax.hpp  syntax.y  value.cpp  visitor.cpp
tests/: CMakeLists.txt  bin_op_test.cpp  for_test.cpp  matchers.h  node_test.cpp  value_test.cpp
