find_package(BISON)
find_package(FLEX)
BISON_TARGET(MyParser syntax.y ${CMAKE_CURRENT_SOURCE_DIR}/syntax.cpp)
FLEX_TARGET(MyScanner semantics.l  ${CMAKE_CURRENT_SOURCE_DIR}/semantics.cpp)
ADD_FLEX_BISON_DEPENDENCY(MyScanner MyParser)
add_library(LokusLib context.cpp node.cpp semantics.cpp syntax.cpp value.cpp visitor.cpp)
add_executable(Lokus main.cpp)
target_link_libraries(Lokus LokusLib)
target_include_directories(Lokus PUBLIC ../include)